Fix scrollbar styling

--- a/coffee-data/src/app/globals.css
+++ b/coffee-data/src/app/globals.css
@@ -115,9 +115,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(135deg, var(--clr-3), var(--clr-4));
-  border-radius: 10px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  @apply bg-slate-600 rounded;
 }
 
 ::-webkit-scrollbar-thumb:hover {
